# libnotcurses-sys

./: .gitignore  .rustfmt.toml  Cargo.toml  Changelog.md  README.md
.cargo/: config.toml
.github/workflows/: check.yml  macos.yml.disabled  macos_test.yml  macos_test.yml.disabled  nostd.yml  ubuntu_test.yml  ubuntu_test.yml.disabled  windows.yml  windows_test.yml  windows_test.yml.disabled
.github/workflows.WIP/: macos_test.yml  ubuntu_test.yml  windows_test.yml
examples/: README.md  capabilities.rs  erase_region.rs  full-input.rs  hello-world-c.rs  hello-world-rust.rs  info.rs  input.rs  issue-2238.rs  issue-2351.rs  issue-9.rs  issue-9b.rs  issue-9c.rs  issue-9d.rs  issue-9e.rs  issue-cursor-end-position.rs  issue-input-2169.rs  issue-moving-visuals.rs  issue-visual-blit.rs  pixel-cell.rs  planes.rs
examples/C/: 01-hello-world-cli.c  02-capabilities.c  README.md  gcc.sh
examples/c/: 00-hello-world.c  01-hello-world-cli.c  README.md
examples/direct/: Cargo.toml  README.md
examples/direct/examples/: capabilities.rs  cursor.rs  image-c.rs  image-rust.rs  shared.rs
examples/issues/: Cargo.toml  README.md
examples/issues/examples/: issue-2195-moving-visuals.rs  issue-visual-resize.rs
examples/issues/examples/issue-test/: Cargo.toml
examples/issues/examples/issue-test/src/: lib.rs
examples/poc/: Cargo.toml  README.md
examples/poc/examples/: cjkscroll.rs  direct.rs  kittyzapper.rs  menu.rs  pixel.rs  selector.rs
examples/utils/: canvas.rs  counter.rs  mod.rs
src/: align.rs  alpha.rs  bindings.rs  blitter.rs  box.rs  capabilities.rs  dimension.rs  error.rs  fade.rs  file.rs  key.rs  lib.rs  log_level.rs  macros.rs  metric.rs  resizecb.rs  rgb.rs  scale.rs  stats.rs  string.rs  style.rs  time.rs
src/blitter/: geometry.rs  methods.rs  mod.rs
src/cell/: methods.rs  mod.rs  reimplemented.rs
src/cell/test/: methods.rs  reimplemented.rs
src/cells/: methods.rs  mod.rs  reimplemented.rs
src/channel/: channel.rs  channels.rs  methods.rs  mod.rs  reimplemented.rs
src/channel/test/: reimplemented.rs
src/direct/: methods.rs  mod.rs  reimplemented.rs
src/fd/: methods.rs  mod.rs
src/input/: input_type.rs  keycodes.rs  keys.rs  mice_events.rs  mod.rs  received.rs  reimplemented.rs
src/key/: key.rs  keymod.rs  mod.rs  reimplemented.rs
src/notcurses/: helpers.rs  methods.rs  mod.rs  reimplemented.rs
src/notcurses/options/: builder.rs  flags.rs  mod.rs
src/notcurses/test/: mod.rs  reimplemented.rs
src/palette/: methods.rs  mod.rs  reimplemented.rs
src/pixel/: methods.rs  mod.rs  pixel_impl.rs  reimplemented.rs
src/plane/: helpers.rs  methods.rs  mod.rs  reimplemented.rs
src/plane/options/: builder.rs  c_api.rs  constants.rs  flags.rs  mod.rs
src/plane/test/: reimplemented.rs
src/visual/: geometry.rs  methods.rs  mod.rs  reimplemented.rs
src/visual/methods/: geom.rs  options.rs  options_builder.rs
src/visual/options/: builder.rs  c_api.rs  mod.rs
src/widgets/: mod.rs
src/widgets/menu/: mod.rs
src/widgets/menu/methods/: menu.rs  mod.rs  options.rs
src/widgets/multiselector/: mod.rs
src/widgets/plot/: mod.rs
src/widgets/progbar/: methods.rs  mod.rs
src/widgets/reader/: methods.rs  mod.rs
src/widgets/reel/: mod.rs
src/widgets/selector/: builder.rs  methods.rs  mod.rs
src/widgets/tabbed/: methods.rs  mod.rs
src/widgets/tree/: mod.rs
src/widgets/tree/methods/: mod.rs  options.rs  tree.rs
tools/function-summary/: pending-changes.md
tools/function-summary/history/: bindgen_20210711.rs  bindgen_20210731.rs  bindgen_20210826.rs  bindgen_20210913.rs  changes-20210704-20210711.txt  changes-20210711-20210731.txt  changes-20210731-20210826.txt  changes-20210826-20210913.txt
