[package]
name = "libnotcurses-sys"
version = "3.3.0"
authors = [
	"nick black <dankamongmen@gmail.com>",
	"José Luis Cruz <joseluis@andamira.net>"
]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.58.1"
description = "Low-level Rust bindings for the notcurses C library."
documentation = "https://docs.rs/libnotcurses-sys/"
repository = "https://github.com/dankamongmen/libnotcurses-sys"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
readme = "./README.md"
links = "notcurses"
build = "build/build.rs"
categories = [
	"external-ffi-bindings",
	"command-line-interface",
	"visualization",
	"multimedia",
	"rendering",
]
keywords = ["tui", "cli", "terminal", "ncurses", "ffi"]
include = [
	"/examples/hello-world-*.rs",
	"/examples/erase_region.rs",
	"/examples/info.rs",
	"/examples/input.rs",
	"/examples/pixel-cell.rs",
	"/examples/planes.rs",
	"/examples/utils/mod.rs",
	"/examples/utils/canvas.rs",
	"/examples/utils/counter.rs",
	"/build/",
	"/src/",
	"/LICENSE-*",
	"/README.md"
]

[dependencies]
# A dependency's version number must be the minimum available in all of:
# - Fedora rawhide
# - Debian Sid

# 0.2.103 in Debian Sid https://tracker.debian.org/pkg/rust-libc
# 0.2.108 in Fedora Rawhide https://pkgs.org/search/?q=rust-libc-devel
libc = { version = "^0.2.103", default-features = false }

# 0.2.1 in Debian Sid https://tracker.debian.org/pkg/rust-cty
# 0.2.1 in Fedora Rawhide https://pkgs.org/download/rust-cty-devel
cty = "^0.2.1"

[dev-dependencies]
serial_test = "^0.5.1"

# for the examples
rand = "^0.8"

[build-dependencies]
bindgen = "^0.59"
pkg-config = "^0.3.18"

cc = { version = "^1.0", optional = true }

[features]
# enable this feature to compile the notcurses C source code.
compile_csource = ["cc", "keep_vendored"]
# enable this feature to vendor the C source code into the crate.
vendor_csource = ["keep_vendored"]
# enable this feature to vendor the bindgen generated bindings into the crate.
vendor_bindings = ["keep_vendored"]
# enable this feature to use the already vendored bindings to compile the crate.
# This eliminates the need to embed the C source in the crate just for docs.rs.
use_vendored_bindings = ["keep_vendored"]
# enable this feature to keep the vendored files, instead of deleting them.
keep_vendored = []

[package.metadata.docs.rs]
features = ["use_vendored_bindings"]

[badges]
maintenance = { status = "actively-developed" }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
#
[profile.release]
# opt-level = 0            # [0-*3 | s | z]
# lto = "fat"              # [*fat | thin]
# debug = 1                # [*0/false | 1 | 2/true]
# debug-assertions = true  # [*false | true]
